fixed image size for event carousel, removed overlap

--- a/less/eventCarousel.less
+++ b/less/eventCarousel.less
@@ -16,8 +16,8 @@
   width: 25rem;
 }
 .event-carousel-img {
-  min-width: 15rem;
-  max-height: 15rem;
+  min-width: 12rem;
+  max-height: 12rem;
   object-fit: contain;
   margin-left: auto;
   margin-right: auto;
